# mlir-tutorial

./: .gitignore  CMakeLists.txt  MLIR学习可以参考的项目.md  README.md
ex1-io/: CMakeLists.txt
ex2-build/: CMakeLists.txt
ex2-build-new/: CMakeLists.txt  cgeist-input.c  cgeist-output.mlir  toy-build.cpp
ex5-pass-new/: CMakeLists.txt  cmake-cmd.sh
ex5-pass-new/include/toy/Passes/: CMakeLists.txt  Passes.h  Passes.td
ex5-pass-new/lib/toy/: CMakeLists.txt
ex5-pass-new/lib/toy/Passes/: CMakeLists.txt  PassDetails.h  ToyIterArgs.cpp  ToyLoopUnroll.cpp
ex5-pass-new/tools/: CMakeLists.txt
ex5-pass-new/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
